--- a/src/app/features/dashboard/dashboard/dashboard-card/dashboard-card.component.html
+++ b/src/app/features/dashboard/dashboard/dashboard-card/dashboard-card.component.html
@@ -1,4 +1,5 @@
 <mat-card>
+  <div class="background"></div>
   <mat-card-title>{{cardModel?.title}}</mat-card-title>
   <mat-card-subtitle>{{cardModel?.subtitle}}</mat-card-subtitle>
 </mat-card>
