--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,5 +2,7 @@
   <button mat-icon-button (click)="menuButtonClickHandle()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Magic Seals</span>
+  <span>Magic Seals</span>  <button mat-icon-button (click)="homeButtonClickHandle()">
+    <mat-icon>home</mat-icon>
+  </button>
 </mat-toolbar>
