Fixed seal card background color.

--- a/src/app/features/seals/components/seals/seal/seal.component.html
+++ b/src/app/features/seals/components/seals/seal/seal.component.html
@@ -1,3 +1,4 @@
+<mat-card>
 <div class="statement">
   <label>Afirmatia:</label>
   <p>{{seal?.statement}}</p>
@@ -18,3 +19,4 @@
     <p>{{seal?.condensedNumericSeal}}</p>
   </div>
 </div>
+</mat-card>
