Added some style to components.

--- a/src/app/features/seals/components/seals/seal/seal.component.scss
+++ b/src/app/features/seals/components/seals/seal/seal.component.scss
@@ -3,6 +3,7 @@ mat-card {
   flex-direction: column;
   word-wrap: break-word;
   background: transparent;
+  margin-top: 36px;
   .statement {
     padding: 5px;
     border: 1px solid rgba(1, 1, 1, 0.3);
