--- a/src/app/features/dashboard/dashboard/dashboard-card/dashboard-card.component.scss
+++ b/src/app/features/dashboard/dashboard/dashboard-card/dashboard-card.component.scss
@@ -3,7 +3,6 @@ mat-card {
   width: 100px;
   margin: 5px;
   cursor: pointer;
-  background: transparent;
 
   .background {
     position:absolute;
@@ -11,20 +10,29 @@ mat-card {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: -1;
+    z-index: 1;
     background-image: url('/assets/pictures/seal.jpg');
     background-position: center;
     background-size: contain;
-    opacity: 20%;
+    opacity: 10%;
+    transition: opacity 0.1s ease-in-out;
   }
+  .content {
+    position:absolute;
+    top: 15px;
+    bottom: 5px;
+    left: 5px;
+    right: 5px;
+    z-index: 10;
 
-  .mat-card:hover {
-    .background {
-      opacity: 100%;
+    mat-card-title {
+      text-align: center;
     }
   }
 }
 
-mat-card:hover {
-  box-shadow: 5px 5px 5px rgba(1, 1, 1, 0.5);
+.mat-card:hover {
+  .background {
+    opacity: 30%;
+  }
 }
