--- a/src/app/features/seals/components/seals/seals.component.html
+++ b/src/app/features/seals/components/seals/seals.component.html
@@ -1,8 +1,18 @@
-<mat-form-field appearance="outline">
-  <mat-label>Introduceti afirmatia aici</mat-label>
-  <textarea matInput rows="4" placeholder="Afirmatia" [(ngModel)]="statement" (ngModelChange)="onModelChangeHandler($event)"></textarea>
-  <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-  <mat-hint>Afirmatia trebuie sa fie pozitiva, realizabila, si sa contina un sentiment</mat-hint>
-</mat-form-field>
+<mat-card>
+  <mat-form-field appearance="outline">
+    <mat-label>Introduceti afirmatia aici</mat-label>
+    <textarea
+      matInput
+      rows="4"
+      placeholder="Afirmatia"
+      [(ngModel)]="statement"
+      (ngModelChange)="onModelChangeHandler($event)"
+    ></textarea>
+    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+    <mat-hint
+      >Afirmatia trebuie sa fie pozitiva, realizabila, si sa contina un
+      sentiment</mat-hint
+    >
+  </mat-form-field>
+</mat-card>
 <app-seal [seal]="seal"></app-seal>
-
