--- a/src/app/features/seals/components/strategy-selector/strategy-selector.component.html
+++ b/src/app/features/seals/components/strategy-selector/strategy-selector.component.html
@@ -1,8 +1,23 @@
 <mat-card>
   <mat-card-title>Selectati strategia de sigilare</mat-card-title>
   <mat-radio-group aria-label="Select strategy" [value]="strategy" (change)="strategyChangedHandler($event.value)">
-    <mat-radio-button [value]="SealStrategy.RemoveAllAlreadyExistingCharacters">Strategia 1</mat-radio-button>
-    <mat-radio-button [value]="SealStrategy.RemoveAllCharactersWithMultipleOccurences">Strategia 2</mat-radio-button>
-    <mat-radio-button [value]="SealStrategy.RemovePairs">Strategia 3</mat-radio-button>
+    <mat-radio-button
+      [value]="SealStrategy.RemoveAllAlreadyExistingCharacters"
+      matTooltip="Se pastrează doar caracterele care apar o singură dată în afirmație."
+      [matTooltipPosition]="'left'"
+      matTooltipHideDelay="tooltipHideDelay"
+      >Strategia 1</mat-radio-button>
+    <mat-radio-button
+      [value]="SealStrategy.RemoveAllCharactersWithMultipleOccurences"
+      matTooltip="Dacă un caracter apare de mai multe ori, se păstrează doar primul."
+      [matTooltipPosition]="'left'"
+      matTooltipHideDelay="tooltipHideDelay"
+      >Strategia 2</mat-radio-button>
+    <mat-radio-button
+      [value]="SealStrategy.RemovePairs"
+      matTooltip="Se șterg perechi de câte 2 caractere, rămân doar caracterele care apar de un număr impar de ori."
+      [matTooltipPosition]="'left'"
+      matTooltipHideDelay="tooltipHideDelay"
+      >Strategia 3</mat-radio-button>
   </mat-radio-group>
 </mat-card>
