--- a/src/app/features/seals/components/seals/seal/seal.component.html
+++ b/src/app/features/seals/components/seals/seal/seal.component.html
@@ -19,4 +19,7 @@
     <p>{{seal?.condensedNumericSeal}}</p>
   </div>
 </div>
+<div>
+  <app-graphical-seal [literalSeal]="seal?.literalSeal"></app-graphical-seal>
+</div>
 </mat-card>
