Improved graphic seal response to dark / light mode.

--- a/src/app/features/seals/components/seals/seal/seal.component.html
+++ b/src/app/features/seals/components/seals/seal/seal.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="graphic-seal">
-      <app-graphical-seal [foreColor]="'black'"></app-graphical-seal>
+      <app-graphical-seal [foreColor]="sealColor"></app-graphical-seal>
     </div>
   </div>
 </mat-card>
