--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,9 +2,10 @@
   <button mat-icon-button (click)="menuButtonClickHandle()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Sigilii magice</span>  <button mat-icon-button (click)="homeButtonClickHandle()">
+  <span i18n>Magic Sigils</span>  <button mat-icon-button (click)="homeButtonClickHandle()">
     <mat-icon>home</mat-icon>
   </button>
   <span class="example-spacer"></span>
-  <mat-slide-toggle (change)="setDarkMode($event.checked)" [checked]="darkMode">Mod intunecat</mat-slide-toggle>
+  <span>{{today | date}}</span>
+  <mat-slide-toggle i18n (change)="setDarkMode($event.checked)" [checked]="darkMode">Dark mode</mat-slide-toggle>
 </mat-toolbar>
