Translated more elements.

--- a/src/app/features/seals/components/graphical-seal/graphical-seal.component.html
+++ b/src/app/features/seals/components/graphical-seal/graphical-seal.component.html
@@ -1,6 +1,4 @@
 <mat-card>
-  <mat-card-title i18n>
-    Graphical sigil
-  </mat-card-title>
+  <mat-card-title i18n>Graphical sigil</mat-card-title>
   <canvas #canvas width="200" height="200"></canvas>
 </mat-card>
