--- a/src/app/features/seals/components/seals/seals.component.html
+++ b/src/app/features/seals/components/seals/seals.component.html
@@ -10,7 +10,7 @@
     ></textarea>
     <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
     <mat-hint
-      >Afirmatia trebuie sa fie pozitiva, realizabila, si sa contina un
+      >Afirmația trebuie să fie pozitivă, realizabilă și să conțină un
       sentiment</mat-hint
     >
   </mat-form-field>
