--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button (click)="menuButtonClickHandle()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Sigilii magice</span>  <button mat-icon-button (click)="homeButtonClickHandle()">
+  <span i18n>Sigilii magice</span>  <button mat-icon-button (click)="homeButtonClickHandle()">
     <mat-icon>home</mat-icon>
   </button>
   <span class="example-spacer"></span>
