--- a/src/app/features/dashboard/dashboard/dashboard-card/dashboard-card.component.html
+++ b/src/app/features/dashboard/dashboard/dashboard-card/dashboard-card.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <div class="background"></div>
   <div class="content">
-    <mat-card-title>{{cardModel?.title}}</mat-card-title>
-    <mat-card-subtitle>{{cardModel?.subtitle}}</mat-card-subtitle>
+    <mat-card-title i18n>{{cardModel?.title}}</mat-card-title>
+    <mat-card-subtitle i18n>{{cardModel?.subtitle}}</mat-card-subtitle>
   </div>
 </mat-card>
