Fixed romglish language.

--- a/src/app/features/seals/components/seals/seal/seal.component.html
+++ b/src/app/features/seals/components/seals/seal/seal.component.html
@@ -1,22 +1,22 @@
 <mat-card>
   <div class="statement">
-    <label i18n>Afirmatia:</label>
+    <label i18n>Statement:</label>
     <p>{{ seal?.statement }}</p>
   </div>
   <div class="result">
     <div class="values">
       <div class="literal-seal">
-        <label i18n>Sigiliul literal:</label>
+        <label i18n>Literal Sigil:</label>
         <p>{{ seal?.literalSeal }}</p>
       </div>
 
       <div class="numeric-seal">
-        <label i18n>Sigiliul numeric:</label>
+        <label i18n>Numeric Sigil:</label>
         <p>{{ seal?.numericSeal }}</p>
       </div>
 
       <div class="condensed-numeric-seal">
-        <label i18n>Sigiliul numeric condensat:</label>
+        <label i18n>Reduced Numeric Sigil:</label>
         <p>{{ seal?.condensedNumericSeal }}</p>
       </div>
     </div>
