--- a/src/app/features/seals/components/seals/seals.component.html
+++ b/src/app/features/seals/components/seals/seals.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-form-field appearance="outline">
-    <mat-label i18n>Introduceti afirmatia aici</mat-label>
+    <mat-label i18n>Enter statement here</mat-label>
     <textarea
       matInput
       rows="2"
@@ -10,8 +10,7 @@
     ></textarea>
     <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
     <mat-hint i18n
-      >Afirmatia trebuie sa fie pozitiva, realizabila si sa contina un
-      sentiment</mat-hint
+      >Statement sohuld be positive, achieveable and contain a feeling.</mat-hint
     >
   </mat-form-field>
 </mat-card>
