Added more translations.

--- a/src/app/features/seals/components/graphical-seal/graphical-seal.component.html
+++ b/src/app/features/seals/components/graphical-seal/graphical-seal.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-title>
-    Graphical seal
+    {{'SIGILS.GRAPHICAL_SIGIL' | translate }}
   </mat-card-title>
   <canvas #canvas width="200" height="200"></canvas>
 </mat-card>
