--- a/src/app/features/seals/components/seals/seals.component.html
+++ b/src/app/features/seals/components/seals/seals.component.html
@@ -1,10 +1,10 @@
 <mat-card>
   <mat-form-field appearance="outline">
-    <mat-label>Introduceti afirmatia aici</mat-label>
+    <mat-label>{{'SIGILS.ENTER_STATEMENT' | translate}}</mat-label>
     <textarea
       matInput
       rows="2"
-      placeholder="Afirmatia"
+      [placeholder]="'SIGILS.STATEMENT' | translate"
       [(ngModel)]="statement"
       (ngModelChange)="onModelChangeHandler($event)"
     ></textarea>
