--- a/src/app/features/seals/components/seals/seals.component.html
+++ b/src/app/features/seals/components/seals/seals.component.html
@@ -9,9 +9,7 @@
       (ngModelChange)="onModelChangeHandler($event)"
     ></textarea>
     <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-    <mat-hint
-      >Afirmatia trebuie sa fie pozitiva, realizabila, si sa contina un
-      sentiment</mat-hint
+    <mat-hint>{{'SIGILS.STATEMENT_DESCRIPTION' | translate}}</mat-hint
     >
   </mat-form-field>
 </mat-card>
