--- a/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.html
+++ b/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-title>
+<div mat-dialog-title color="primary">
   <span>{{'SIGILS.GRAPHICAL_SIGIL' | translate}}</span>
   <span><button mat-icon-button (click)="handleCloseDialog(false)">
     <mat-icon>close</mat-icon>
