--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,1 +1,3 @@
 <app-strategy-selector></app-strategy-selector>
+<app-language-selector></app-language-selector>
+<app-dark-mode-selector></app-dark-mode-selector>
