--- a/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.html
+++ b/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-title color="primary">
+<div mat-dialog-title mat-dialog-draggable-title color="primary">
   <span>{{'SIGILS.GRAPHICAL_SIGIL' | translate}}</span>
   <span><button mat-icon-button (click)="handleCloseDialog(false)">
     <mat-icon>close</mat-icon>
@@ -6,9 +6,10 @@
 </div>
 
 <div mat-dialog-content class="sigil-image">
-  <img [src]="image" height="400px" width="400px">
+  <img [src]="image" height="350px" width="350px">
 </div>
 
 <div mat-dialog-actions>
-  <button mat-button (click)="handleCloseDialog(true)">{{'SIGILS.LAUNCH' | translate}}</button>
+  <button mat-stroked-button color="accent"
+    (click)="handleCloseDialog(true)">{{'SIGILS.LAUNCH' | translate}}</button>
 </div>
