--- a/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.scss
+++ b/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.scss
@@ -10,6 +10,7 @@
     margin-right: -24px;
     padding-left: 4px;
     padding-right: 2px;
+    border-bottom: solid 1px rgba(1, 1, 1, 0.5);
     //background-color: $primary;
 }
 
