--- a/src/app/features/seals/components/seals/seals.component.html
+++ b/src/app/features/seals/components/seals/seals.component.html
@@ -11,7 +11,9 @@
     <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
     <mat-hint>{{'SIGILS.STATEMENT_DESCRIPTION' | translate}}</mat-hint>
   </mat-form-field>
-  <button mat-button color="primary" (click)="handleChargeClick()">
+  <button mat-stroked-button color="primary"
+    [disabled]="!statement"
+    (click)="handleChargeClick()">
     {{'SIGILS.CHARGE' | translate}}
   </button>
 </mat-card>
