--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -5,7 +5,7 @@
 @include mat.core();
 
 $angular-primary: mat.define-palette(mat.$blue-grey-palette, 500, 100, 900);
-$angular-accent: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
+$angular-accent: mat.define-palette(mat.$purple-palette, A200, A100, A400);
 $angular-warn: mat.define-palette(mat.$red-palette);
 
 $angular-default-theme: mat.define-light-theme(
