--- a/src/app/features/seals/components/strategy-selector/strategy-selector.component.html
+++ b/src/app/features/seals/components/strategy-selector/strategy-selector.component.html
@@ -4,19 +4,19 @@
     <mat-radio-button
       [value]="SealStrategy.RemoveAllAlreadyExistingCharacters"
       [matTooltip]="'SIGILS.STRATEGY_1_DESCRIPTION' | translate"
-      [matTooltipPosition]="'left'"
+      [matTooltipPosition]="'right'"
       matTooltipHideDelay="tooltipHideDelay"
       >{{'SIGILS.STRATEGY' | translate}} 1</mat-radio-button>
     <mat-radio-button
       [value]="SealStrategy.RemoveAllCharactersWithMultipleOccurences"
       [matTooltip]="'SIGILS.STRATEGY_2_DESCRIPTION' | translate"
-      [matTooltipPosition]="'left'"
+      [matTooltipPosition]="'right'"
       matTooltipHideDelay="tooltipHideDelay"
       >{{'SIGILS.STRATEGY' | translate}} 2</mat-radio-button>
     <mat-radio-button
       [value]="SealStrategy.RemovePairs"
       [matTooltip]="'SIGILS.STRATEGY_3_DESCRIPTION' | translate"
-      [matTooltipPosition]="'left'"
+      [matTooltipPosition]="'right'"
       matTooltipHideDelay="tooltipHideDelay"
       >{{'SIGILS.STRATEGY' | translate}} 3</mat-radio-button>
   </mat-radio-group>
