--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,20 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-dialog-title {
+  display: flex !important;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: -24px !important;
+  margin-left: -24px !important;
+  margin-right: -24px !important;
+  padding-left: 4px;
+  padding-right: 2px;
+  border-bottom: solid 1px rgba(1, 1, 1, 0.5);
+}
+
+.mat-dialog-actions {
+  justify-content: right;
+}
