Small visual improvments.

--- a/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
@@ -5,7 +5,7 @@
   </button></span>
 </div>
 
-<div mat-dialog-content >
+<div mat-dialog-content class="darkMode">
   <p>{{data.message}}</p>
 </div>
 
