--- a/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.html
+++ b/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-title mat-dialog-draggable-title color="primary">
-  <span>{{'SIGILS.GRAPHICAL_SIGIL' | translate}}</span>
+  <span>{{data.title}}</span>
   <span><button mat-icon-button (click)="handleCloseDialog(false)">
     <mat-icon>close</mat-icon>
   </button></span>
