--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,8 +12,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   margin-top: -24px !important;
   margin-left: -24px !important;
   margin-right: -24px !important;
+  padding: 2px;
   padding-left: 4px;
-  padding-right: 2px;
   border-bottom: solid 1px rgba(1, 1, 1, 0.5);
 }
 
