--- a/src/app/features/seals/components/seals/seal/seal.component.html
+++ b/src/app/features/seals/components/seals/seal/seal.component.html
@@ -21,7 +21,9 @@
     <div class="graphic-seal">
       <app-graphical-seal
         [backgroundColor]="sealBackgroundColor"
-        [foreColor]="sealColor"></app-graphical-seal>
+        [foreColor]="sealColor"
+        [lineWidth]="3"
+        [shouldDrawMap]="false"></app-graphical-seal>
     </div>
   </div>
 </mat-card>
