Added different sizes of charge and launch sigil for diferent medias.

--- a/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.html
+++ b/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div mat-dialog-content class="sigil-image">
-  <img [src]="image" height="350px" width="350px">
+  <img [src]="image">
 </div>
 
 <div mat-dialog-actions>
