--- a/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.scss
+++ b/src/app/features/seals/components/charge-and-launch/charge-and-launch.component.scss
@@ -16,4 +16,30 @@
 
 .sigil-image {
     text-align: center;
+
+    img {
+        width: 375px;
+        height: 375px;
+    }
+
+    @media only screen and (max-width: 600px) {
+        img {
+            width: 350px;
+            height: 350px;        
+        }
+    }
+
+    @media only screen and (max-width: 500px) {
+        img {
+            width: 300px;
+            height: 300px;        
+        }
+    }
+
+    @media only screen and (max-width: 400px) {
+        img {
+            width: 250px;
+            height: 250px;        
+        }
+    }
 }
