--- a/src/app/layout/components/logout/logout.component.html
+++ b/src/app/layout/components/logout/logout.component.html
@@ -1,17 +1,28 @@
 <div *ngIf="isAuthenticated" class="logout-component">
-  <!-- <span>{{'HEADER.WELCOME' | translate}}, {{user?.firstName}}</span> -->
   <span>
     <img
       class="picture"
-      [src]="user?.photoUrl"
-      [matTooltip]="user?.name || ''"
+      [src]="user?.photoURL"
+      [matTooltip]="user?.displayName || ''"
       [matTooltipPosition]="'below'"
       matTooltipHideDelay="tooltipHideDelay"
   /></span>
-  <button mat-icon-button (click)="logout()"
+  <button
+    mat-icon-button
+    (click)="logout()"
     [matTooltip]="'logout'"
     [matTooltipPosition]="'below'"
   >
     <mat-icon>logout</mat-icon>
   </button>
+</div>
+<div *ngIf="!isAuthenticated" class="logout-component">
+  <button
+  mat-icon-button
+  (click)="login()"
+  [matTooltip]="'login'"
+  [matTooltipPosition]="'below'"
+>
+  <mat-icon>login</mat-icon>
+</button>
 </div>
